# minimeshb

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
data/: mesh2d.mesh  mesh2d.meshb  mesh3d.mesh  mesh3d.meshb  sol2d_scalar.sol  sol2d_scalar.solb  sol2d_vec.sol  sol2d_vec.solb  sol3d_scalar.sol  sol3d_scalar.solb  sol3d_vec.sol  sol3d_vec.solb
pvmeshbreader/: Cargo.toml  pvmeshbreader.py
pvmeshbreader/src/: lib.rs
src/: lib.rs  reader.rs  writer.rs
src/libmeshb/: mod.rs  reader.rs  writer.rs
