[package]
name = "minimeshb"
version = "0.1.0"
edition = "2021"
links = "minimeshb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
tempfile = "3.8.0"
libmeshb-sys = {git = "https://github.com/tucanos/libmeshb-sys.git", optional = true, rev = "7b0dfd2"}
rand = "0.8.5"

